--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html5>
 <html>
 <head>
+  <script type="text/javascript" src="../../dist/menrva.standalone.js"></script>
   <script type="text/javascript" src="../lib/jquery.js"></script>
-  <script type="text/javascript" src="../lib/Bacon.js"></script>
-  <script type="text/javascript" src="counter-bacon-bus.js"></script>
+  <script type="text/javascript" src="counter.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
