--- a/examples/suggestions/index.html
+++ b/examples/suggestions/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script type="text/javascript" src="../../dist/menrva.standalone.js"></script>
-  <script type="text/javascript" src="../lib/jquery.js"></script>
+  <script type="text/javascript" src="../../lib/jquery.js"></script>
   <script type="text/javascript" src="suggestions.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
