--- a/examples/counter/bacon-bus.html
+++ b/examples/counter/bacon-bus.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html5>
 <html>
 <head>
-  <script type="text/javascript" src="../lib/jquery.js"></script>
-  <script type="text/javascript" src="../lib/Bacon.js"></script>
+  <script type="text/javascript" src="../../lib/jquery.js"></script>
+  <script type="text/javascript" src="../../lib/Bacon.js"></script>
   <script type="text/javascript" src="counter-bacon-bus.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
