--- a/examples/counter/rxjs.html
+++ b/examples/counter/rxjs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html5>
 <html>
 <head>
-  <script type="text/javascript" src="../lib/jquery.js"></script>
-  <script type="text/javascript" src="../lib/rx.lite.js"></script>
+  <script type="text/javascript" src="../../lib/jquery.js"></script>
+  <script type="text/javascript" src="../../lib/rx.lite.js"></script>
   <script type="text/javascript" src="counter-rxjs.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
