Use new convinience features in autocomplete example

--- a/examples/autocomplete/autocomplete.html
+++ b/examples/autocomplete/autocomplete.html
@@ -4,7 +4,7 @@
     <title>Autocomplete Example</title>
     <script src="../../lib/jquery.js"></script>
     <script src="../../lib/lodash.js"></script>
-    <script src="../../dist/mnerva.standalone.js"></script>
+    <script src="../../dist/menrva.standalone.js"></script>
     <script src="autocomplete.js"></script>
     <link href="autocomplete.css" rel="stylesheet" type="text/css">
   </head>
